# Webinar_Axum_SQLX_Sqlite

./: Cargo.toml
migrations/: 20231228145026_initial.sql
src/: db.rs  main.rs
