[package]
name = "webinar_axum_perso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = "0.7.2"
dotenv = "0.15.0"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
axum-test-helper = "0.3.0"
